try to fix contact section overlapping issue

--- a/css/style.css
+++ b/css/style.css
@@ -300,6 +300,7 @@ img:focus{
 }
 .main .project-area{
     padding-top: 4rem;
+    min-height: fit-content;
 }
 
 .main .project-area .button-group{
